fix: model viewer on mobile

--- a/static/styles/slices.css
+++ b/static/styles/slices.css
@@ -205,12 +205,13 @@
   position: relative;
   background: transparent;
   margin-bottom: 50px;
+  width: 100%;
 }
 
 .Slice__model-loader {
   position: absolute;
   max-width: 500px;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   left: 50%;
   background: #fff6;
@@ -247,7 +248,7 @@
 
 .Slice__model-view {
   max-width: 500px;
-  width: 100vw;
+  width: 100%;
   aspect-ratio: 1;
   margin: 0 auto;
   border: 1px solid #fff6;
